# bunnywriting-telegram-bot

./: .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  data.json  docker-compose.yml  lead_data.json  pyproject.toml  setup.cfg  test.py
buildfiles/: Dockerfile
data/: celerybeat-schedule.bak
migrations/: env.py
migrations/versions/: 2024_02_21_2227_.py  2024_02_24_2147_.py  2024_02_29_0646_.py  2024_03_01_0106_.py  2024_03_01_0113_.py  2024_03_01_0558_.py  2024_03_11_0447_.py  2024_04_12_2308_changed_string_to_date_deadline_field.py  2024_04_15_0955_added_ready_date_to_lead_model.py  2024_04_15_0959_added_ready_date_to_lead_model.py  2024_05_06_0340_changed_uniqueness_from_varchar_to_text.py  3dc0d0126585_.py
src/: config.py
src/alert/: admin.py  alert.py
src/auction/: __main__.py  actions.py  find.py  utils.py
src/auction/private/: __main__.py
src/auction/public/: __main__.py
src/auction/services/: base.py  private_auction.py  public_autction.py
src/bot/: __main__.py  misc.py
src/bot/filters/: admin.py  author.py  user.py
src/bot/handlers/: __init__.py  admin.py  author.py  base.py
src/bot/handlers/admin/: __init__.py  base.py  create_author.py  mailing.py  urgent_list.py
src/bot/handlers/author/: __init__.py  base.py
src/bot/keyboards/: admin.py  author.py
src/bot/middlewares/: __init__.py  database.py
src/bot/services/: broadcaster.py  redis.py
src/bot/states/: admin.py  author.py
src/bot/utils/: logging.py
src/crm/: __init__.py  __main__.py  author.py  exceptions.py  lead.py  token.py  utils.py
src/crm/services/: author.py  lead.py
src/db/: __init__.py  database.py  models.py  schemas.py  utils.py
src/db/repositories/: __init__.py  abstract.py  admin.py  author.py  lead.py  specialities.py
src/db/schemas/: user.py
src/db/services/: admin.py  author.py  lead.py  speciality.py  user.py
src/dump/: __init__.py  __main__.py  dump.py
src/worker/: __init__.py  celery.py  tasks.py
tests/: conftest.py
tests/utils/: alembic.py
